--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-query": "^1.26.0",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
